--- a/bobr.html
+++ b/bobr.html
@@ -87,7 +87,58 @@
           <img class="img-in-block" src="img/Polygon 1.png">
         </div>
         <div class="inimg-3">
-          <img class="img-in-block-two" src="img/Polygon 1 (1).png"
+          <img class="img-in-block-two" src="img/Polygon 1 (1).png">
+        </div>
+      </div>
+      <div class="main-3" style="padding-top: 70px;">
+        <h1 class="zglav">Галерея</h1>
+        <div class="block-in-img">
+          <div class="inimg-4"><img class="img-in-block-1" src="img/Polygon 1.png">
+          </div>
+          <div class="inimg-5">
+            <img class="img-in-block-2" src="img/Polygon 1 (1).png">
+          </div>
+          <div class="foto">
+            <p>Все фото</p>
+            <img class="foto1" src="img/Polygon 1 (2).png" height="10px">
+          </div>
+        </div>
+      </div>
+      <div class="main-4">
+        <div>
+          <img src="img/Rectangle 818.png" width="400px">
+          <figcaption>Бобер 1</figcaption>
+          <p>дата публикации</p>
+        </div>
+        <div>
+          <img src="img/Rectangle 818.png" width="400px">
+          <figcaption>Бобер 1</figcaption>
+          <p>дата публикации</p>
+        </div>
+      </div>
+      <div class="cont">
+        <div style="margin-bottom: 100px;">
+          <h1 class="zglav">Крупный заголовок про бобров</h1>
+          <div class="text">
+            <p >Исследования показывают, что бобыры способны влиять на климатические условия в регионах, где они обитают, благодаря своей способности создавать мокрые зоны. Эти зоны удерживают влагу и помогают снижать температуру окружающей среды.</p>
+          </div>
+        </div>
+        <hr>
+        <div class="cont-1">
+          <div>
+            <h1 class="popular">Популярные виды</h1>
+          </div>
+          <div class="inimg-block">
+            <div class="inimg-block-1"><img class="inimg-img" src="img/Polygon 1.png">
+            </div>
+            <div class="inimg-block-2">
+              <img class="inimg-img" src="img/Polygon 1 (1).png">
+            </div>
+            <div class="all-foto">
+              <p>Смотреть все</p>
+              <img class="foto2" src="img/Polygon 1 (2).png" height="10px">
+            </div>
+          </div>
         </div>
       </div>
     </div>
