закончил весь макет, далее будут только правки и дополнение визуала, + техника

--- a/bobr.html
+++ b/bobr.html
@@ -129,7 +129,7 @@
             <h1 class="popular">Популярные виды</h1>
           </div>
           <div class="inimg-block">
-            <div class="inimg-block-1"><img class="inimg-img" src="img/Polygon 1.png">
+            <div class="inimg-block-1"><img class="inimg-img-1" src="img/Polygon 1.png">
             </div>
             <div class="inimg-block-2">
               <img class="inimg-img" src="img/Polygon 1 (1).png">
@@ -138,6 +138,90 @@
               <p>Смотреть все</p>
               <img class="foto2" src="img/Polygon 1 (2).png" height="10px">
             </div>
+          </div>
+        </div>
+        <div class="scroll-img">
+          <div class="scroll">
+            <div class="sc-img">
+              <img src="img/Rectangle 818.png" height="100">
+              <figcaption class="fig-img">св-во • св-во • св-во</figcaption>
+              <h5 class="fig-h5">Заголовок карточки</h5>
+              <h4 class="fig-h4">Цена ₽</h>
+              <p class="fig-p">старая цена</p>
+              <button class="fig-button" type="submit">Подробнее</button>
+            </div>
+          </div>
+          <div class="scroll">
+            <div class="sc-img">
+              <img src="img/Rectangle 818.png" height="100">
+              <figcaption class="fig-img">св-во • св-во • св-во</figcaption>
+              <h5 class="fig-h5">Заголовок карточки</h5>
+              <h4 class="fig-h4">Цена ₽</h>
+              <p class="fig-p">старая цена</p>
+              <button class="fig-button" type="submit">Подробнее</button>
+            </div>
+          </div>
+          <div class="scroll">
+            <div class="sc-img">
+              <img src="img/Rectangle 818.png" height="100">
+              <figcaption class="fig-img">св-во • св-во • св-во</figcaption>
+              <h5 class="fig-h5">Заголовок карточки</h5>
+              <h4 class="fig-h4">Цена ₽</h>
+              <p class="fig-p">старая цена</p>
+              <button class="fig-button" type="submit">Подробнее</button>
+            </div>
+          </div>
+          <div class="scroll">
+            <div class="sc-img"> 
+              <img src="img/Rectangle 818.png" height="100">
+              <figcaption class="fig-img">св-во • св-во • св-во</figcaption>
+              <h5 class="fig-h5">Заголовок карточки</h5>
+              <h4 class="fig-h4">Цена ₽</h>
+              <p class="fig-p">старая цена</p>
+              <button class="fig-button" type="submit">Подробнее</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="pre-footer">
+        <img style="border-radius: 64px;" src="img/Rectangle 818.png" height="300">
+        <h3 class="pre-h3">Есть вопросы?</h3>
+        <h3 class="pre-h3">Мы вам поможем!</h3>
+        <p class="pre-p">Оставьте номер вашего телефона, чтобы мы перезвонили</p>
+        <button class="pre-button" type="submit">Оставить заявку</button>
+      </div>
+      <hr>
+      <div class="cont">
+        <div class="footer">
+          <div class="footer-1">Адрес</div>
+          <div class="footer-2">г. Санкт-Петербург, Лиговский просп., 47</div>
+          <div class="footer-1">Пн-Пт: 9:00 — 21:00</div>
+          <div class="footer-1">Сб-Вс: 10:00 — 19:00</div>
+        </div>
+        <div class="reference-footer">
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+          <div>Ссылка</div>
+        </div>
+        <hr>
+        <div class="close">
+          <div class="close-img-1">
+            <img src="img/Frame 9600.png">
+          </div>
+          <div class="close-img-2">
+            <img src="img/Frame 9601.png">
+          </div>
+          <div class="close-p">
+            <p>Обратим внимание на одну из самых распространённых разговорных лексических единиц, которая отличается удивительной универсальностью: с её помощью можно выразить практически любые чувства. Экспрессии в ней хоть отбавляй.</p>
+          </div>
+          <div class="close-h5">
+            <h5>Политика конфиденциальности</h5>
           </div>
         </div>
       </div>
