Добавил анимацию на кнопки и ссылки. Следующие дополнения в будущей разработке

--- a/bobr.html
+++ b/bobr.html
@@ -99,7 +99,7 @@
             <img class="img-in-block-2" src="img/Polygon 1 (1).png">
           </div>
           <div class="foto">
-            <p>Все фото</p>
+            <a href="https://www.google.com/search?sxsrf=AB5stBiyoVUxfZ-SbYL9b70cPMTRLyc_Fw:1690793696007&q=%D1%84%D0%BE%D1%82%D0%BE+%D0%B1%D0%BE%D0%B1%D1%80%D0%BE%D0%B2&tbm=isch&source=lnms&sa=X&ved=2ahUKEwi37o2tybiAAxVG7rsIHUb2DWEQ0pQJegQIChAB&biw=1600&bih=783&dpr=1" target="_blank"><p>Все фото</p></a>
             <img class="foto1" src="img/Polygon 1 (2).png" height="10px">
           </div>
         </div>
@@ -135,7 +135,7 @@
               <img class="inimg-img" src="img/Polygon 1 (1).png">
             </div>
             <div class="all-foto">
-              <p>Смотреть все</p>
+              <a href="https://www.google.com/search?sxsrf=AB5stBiyoVUxfZ-SbYL9b70cPMTRLyc_Fw:1690793696007&q=%D1%84%D0%BE%D1%82%D0%BE+%D0%B1%D0%BE%D0%B1%D1%80%D0%BE%D0%B2&tbm=isch&source=lnms&sa=X&ved=2ahUKEwi37o2tybiAAxVG7rsIHUb2DWEQ0pQJegQIChAB&biw=1600&bih=783&dpr=1" target="_blank"><p>Смотреть все</p></a>
               <img class="foto2" src="img/Polygon 1 (2).png" height="10px">
             </div>
           </div>
@@ -199,15 +199,15 @@
           <div class="footer-1">Сб-Вс: 10:00 — 19:00</div>
         </div>
         <div class="reference-footer">
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
-          <div>Ссылка</div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
+          <div><a>Ссылка</a></div>
         </div>
         <hr>
         <div class="close">
@@ -221,7 +221,7 @@
             <p>Обратим внимание на одну из самых распространённых разговорных лексических единиц, которая отличается удивительной универсальностью: с её помощью можно выразить практически любые чувства. Экспрессии в ней хоть отбавляй.</p>
           </div>
           <div class="close-h5">
-            <h5>Политика конфиденциальности</h5>
+            <h5><a>Политика конфиденциальности</a></h5>
           </div>
         </div>
       </div>
